# remove-static-fcurves

./: .gitignore  CONTRIBUTING.md  README.md  config.yml  pyproject.toml
scripts/: build.py  cfg.py  dev.blend  dev.py  watch.py
src/: __init__.py  blender_manifest.toml  operator.py
src/remove_static_fcurves/: __init__.py  env.py
src/utils/: __init__.py  compat.py  version.py
